# lab-data-visualization-tool

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  data.csv  main.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  进入venv.txt
.github/workflows/: ci.yml
labviz/: cli.py
tests/: test_core.py  test_smoke.py  test_utils.py
