[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lab-data-visualization-tool"
version = "0.1.0"
description = "A Python tool for cleaning and visualizing experimental datasets"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{ name = "Your Name" }]
keywords = ["streamlit", "data", "visualization", "lab", "csv"]

dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "matplotlib>=3.7",
  "streamlit>=1.33",
]

[project.urls]
Homepage = "https://github.com/DDDYT24/lab-data-visualization-tool"
Issues = "https://github.com/DDDYT24/lab-data-visualization-tool/issues"

[project.scripts]
labviz = "main:main"
