[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "labviz"
version = "0.1.0"
description = "Lab data visualization tool"
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
    "streamlit>=1.31",
    "pandas>=2.0",
    "numpy>=1.25",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true
warn_unused_ignores = true
